--- a/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
@@ -55,7 +55,8 @@ label.refresh  =Refresh
 label.waiting.for.leader  =Please, wait while somebody will become a group leader.
 label.manage.leaders  =Manage leaders
 label.plese.select.leaders  =Please, select leaders
-label.no.leader.yet  =No leader has been chosen yet. Once a leader is selected, you will be able to continue to the next activity
+label.no.leader.yet.title  =No leader has been chosen yet 
+label.no.leader.yet.body =Once a leader is selected, you will be able to continue to the next activity
 heading.leader  =Group leader
 monitoring.label.group  =Group
 
