--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 22 19:55:36 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 18 00:47:23 CST 2017 
  
 #=================== labels for Leader selection =================# 
 
@@ -55,9 +55,10 @@ label.refresh  =Actualizar
 label.waiting.for.leader  =Por favor, espera mientras alguien se convertir\u00e1 en l\u00edder del grupo.
 label.manage.leaders  =Gestione l\u00edderes
 label.plese.select.leaders  =Por favor, elija l\u00edderes
-label.no.leader.yet  =No hay l\u00edder seleccionado. Una vez que el l\u00edder haya sido elegido, podr\u00e1 continuar a la siguiente actividad.
 heading.leader  =L\u00edder del Grupo
 monitoring.label.group  =Grupo
+label.no.leader.yet.title  =No se ha seleccionado l\u00edder
+label.no.leader.yet.body  =Una vez que el l\u00edder haya sido seleccionado, podr\u00e1 avanzar a la siguiente actividad.
 
 
-#======= End labels: Exported 52 labels for es ES =====
+#======= End labels: Exported 53 labels for es ES =====
