--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:04:59 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 01:18:51 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -27,13 +27,13 @@ label.addNewQuestion  =Add new question
 label.moveDown  =Down
 label.add.question  =Add New
 label.add.option  =Add New
-label.mc.options.col  =Candidate Answers:
+label.mc.options.col  =Candidate answers:
 label.learner.message  =You can only proceed to the activity after you have reached the passing mark
-label.viewAnswers  =Previous answers
-label.topMark  =Top Mark:
+label.viewAnswers  =Summary of responses
+label.topMark  =Top mark:
 label.avMark  =Average mark:
 label.loMark  =Lowest mark:
-count.total.user  =Total Users Count:
+count.total.user  =Total users count:
 label.mark  =Mark:
 label.redo.questions  =Redo questions
 label.view  =View
@@ -51,9 +51,9 @@ label.outof  =out of
 label.save  =Save
 label.cancel  =Cancel
 feedback  =Please address the following issues before submit. <br>
-error.passMark.empty  =Please correct this: Pass Mark can not be empty.
+error.passMark.empty  =Please correct this: Pass mark can not be empty.
 options.count.zero  =Please correct this: There must be at least one candidate answer.
-error.passmark.notInteger  =Please correct this: Pass Mark can only be an integer.
+error.passmark.notInteger  =Please correct this: Pass mark can only be an integer.
 error.file.notPersisted  =An error occurred: The file is not viewable yet. Please save all the content first and check back.
 error.fileName.empty  =Please correct this: Under "Instructions", the file(name) to upload can not be empty.
 error.questions.withNoOptions  =Please note: The questions with no candidate answers have been automatically removed for you. Please check total question weight.
@@ -86,7 +86,7 @@ label.stats.totalAllGroups  =Total count of all learners:
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.learning.forceFinishMessage  =Responses are no more allowed. Please finish.
 label.correct  =Correct
-label.passingMark  =Passing Mark
+label.passingMark  =Passing mark
 label.mcqSummary  =MCQ Summary
 label.yourAnswers  =Learner's answers:
 label.learner  =Learner
@@ -101,7 +101,7 @@ label.tip.removeCandidate  =Removes candidate answer
 label.studentMarks  =Learner marks
 label.authoring.title.col  =Title:
 label.authoring.instructions.col  =Instructions:
-label.candidateAnswer  =Candidate Answer
+label.candidateAnswer  =Candidate answer
 label.total  =Total
 label.continue  =Continue
 label.reflect  =Add a notebook at end of MCQ with the following instructions:
@@ -202,15 +202,14 @@ label.tool.output.has.been.changed  =Tool output has changed
 label.operation.failed  =Operation failed
 answers.submitted.none  =Select at least one answer for each of the questions.
 label.summary.downloaded  =Marks file downloaded.
-label.number.learners=Number of Learners
-label.number.groups.finished=Number of Groups Finished
-label.graph.help=In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
-label.lowest.mark=Lowest Mark:
-label.highest.mark=Highest Mark:
-label.question.marks  =Marks
-label.number.learners.in.mark.range=Number of Learners in Mark Range
-label.number.groups.in.mark.range=Number of Groups in Mark Range
+label.number.learners  =Learners
+label.number.groups.finished  =Number of groups finished
+label.graph.help  =In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark  =Lowest mark
+label.highest.mark  =Highest mark
+label.number.learners.in.mark.range  =Number of learners in mark range
+label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
 
 
-#======= End labels: Exported 196 labels for en AU =====
+#======= End labels: Exported 204 labels for en AU =====
