--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:05 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 02:11:12 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -305,6 +305,9 @@ label.other  =Other
 label.graph.help  =In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
 label.lowest.mark  =Lowest mark:
 label.highest.mark  =Highest mark:
+label.number.learners  =Number of learners
+label.percentage  =Percentage
+label.operation.failed  =Operation failed.
 
 
-#======= End labels: Exported 299 labels for en AU =====
+#======= End labels: Exported 302 labels for en AU =====
