LDEV-4352: adding missing labels
Alright, these should be all now for this JIRA

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 02:11:12 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 02:26:23 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -308,6 +308,11 @@ label.highest.mark  =Highest mark:
 label.number.learners  =Number of learners
 label.percentage  =Percentage
 label.operation.failed  =Operation failed.
+label.number.groups.finished  =Number of groups finished
+label.marks  =Marks
+label.number.learners.in.mark.range  =Number of learners in mark range
+label.number.groups.in.mark.range  =Number of groups in mark range
+label.average.mark  =Average mark
 
 
-#======= End labels: Exported 302 labels for en AU =====
+#======= End labels: Exported 307 labels for en AU =====
