--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:10:34 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 02:27:54 CST 2017 
  
 #=================== labels for Scratchie =================# 
 
@@ -202,6 +202,13 @@ label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired.
 label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
 label.authoring.advanced.shuffle.items  =Shuffle questions
 label.summary.downloaded  =Excel file downloaded.
+label.number.groups.finished  =Number of groups finished
+label.graph.help  =In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark  =Lowest mark:
+label.highest.mark  =Highest mark:
+label.marks  =Marks
+label.number.groups.in.mark.range  =Number of groups in mark range
+label.average.mark  =Average mark
 
 
-#======= End labels: Exported 196 labels for en AU =====
+#======= End labels: Exported 203 labels for en AU =====
