--- a/lams_central/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:20:37 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Jul 23 22:50:19 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -26,7 +26,7 @@ button.login  =Logg inn
 label.user.guide  =[Hjelp]
 msg.loading  =Laster inn ...
 msg.LAMS.version  =Versjon
-msg.LAMS.copyright.short  =2002-2015 LAMS Foundation.
+msg.LAMS.copyright.short  =2002 onwards LAMS Foundation.
 button.save  =Lagre
 button.cancel  =Angre
 no.such.learningdesign.exist  =Det finnes ikke en slik design id for(0):
@@ -107,7 +107,7 @@ msg.export.failed  =Eksport av design er mislykket
 msg.reason.is  =\u00c5rsaken er:
 button.close  =Lukk
 button.import  =Importer
-msg.LAMS.copyright.statement.1  =LAMS\u2122 \u00a9 2002-2015 LAMS Foundation.
+msg.LAMS.copyright.statement.1  =LAMS\u2122 \u00a9 2002 onwards LAMS Foundation.
 msg.LAMS.copyright.statement.2  =LAMS er et varemerke for LAMS Foundation. (http://lamsfoundation.org).
 msg.LAMS.copyright.statement.3  =Dette programmet er en gratis programvare; du kan distribuere det videre og modifisere det iht reglene i "GNU General Public License version 2.0" som er publisert av Free Software Foundation.
 title.export  =Innhold i eksport verkt\u00f8y
@@ -222,37 +222,6 @@ index.coursegradebookmonitor  =Karakter
 index.moreActions  =Fler alternativer
 label.required  =N\u00f8dvendig
 label.timezone.title  =Tidssone
-label.timezone.0  =(GMT-12:00) Eniwetok, Kwajalein
-label.timezone.1  =(GMT -11:00) Midway \u00d8yene, Samoa
-label.timezone.2  =(GMT -10:00) Hawaii
-label.timezone.3  =(GMT -9:00) Alaska
-label.timezone.4  =(GMT -8:00) Stllehavs kyst (US & Canada)
-label.timezone.5  =(GMT -7:00) Sentrale fjellkjeder-tid (US & Canada)
-label.timezone.6  =(GMT -6:00) Sentral tid (US & Canada), Mexico City
-label.timezone.7  =(GMT -5:00) \u00d8st tid (US & Canada), Bogota, Lima
-label.timezone.8  =(GMT -4:00) Atlanterkyst tid (Canada), Caracas, La Paz
-label.timezone.9  =(GMT -3:30) Newfoundland
-label.timezone.10  =(GMT -3:00) Brasil, Buenos Aires, Georgetown
-label.timezone.11  =(GMT -2:00) Midt- Atlantisk
-label.timezone.12  =(GMT -1:00 hour) Azorene, Cape Verde Islands
-label.timezone.13  =(GMT) Vest Europeisk tid, London, Lisboa, Casablanca
-label.timezone.14  =(GMT +1:00 time) Brussels, K\u00f8benhavn, Madrid, Paris
-label.timezone.15  =(GMT +2:00) Kaliningrad, S\u00f8r Afrika
-label.timezone.16  =(GMT +3:00) Baghdad, Riyadh, Moskva, St. Petersburg
-label.timezone.17  =(GMT +3:30) Tehran
-label.timezone.18  =(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi
-label.timezone.19  =(GMT +4:30) Kabul
-label.timezone.20  =(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent
-label.timezone.21  =(GMT +5:30) Bombay, Calcutta, Madras, New Delhi
-label.timezone.22  =(GMT +5:45) Kathmandu
-label.timezone.23  =(GMT +6:00) Almaty, Dhaka, Colombo
-label.timezone.24  =(GMT +7:00) Bangkok, Hanoi, Jakarta
-label.timezone.25  =(GMT +8:00) Peking, Perth, Singapore, Hong Kong
-label.timezone.26  =(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk
-label.timezone.27  =(GMT +9:30) Adelaide, Darwin
-label.timezone.28  =(GMT +10:00) \u00d8st Australia, Guam, Vladivostok
-label.timezone.29  =(GMT +11:00) Magadan, Solomon \u00d8yene, New Caledonia
-label.timezone.30  =(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
 email.to  =Til
 email.subject  =Emne
 email.send  =Send
@@ -757,4 +726,4 @@ label.save.as.course.grouping.hint  =Du kan lagre gruppene som "Kursgrupperinger
 label.advanced.settings  =Avanserte innstillinger
 
 
-#======= End labels: Exported 749 labels for no NO =====
+#======= End labels: Exported 718 labels for no NO =====
