LDEV-4366 Introduce rubrics to Kumalive

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -108,6 +108,11 @@ mynotes.add.new.current.lesson.button  =Add note this lesson
 label.group.confirm.header  =Confirm group selection
 label.group.confirm.button  =Confirm
 label.group.confirm.areyoujoining  =Are you joining
+label.kumalive.rubric.name =Enter rubric name
+label.kumalive.rubric.up =Move rubric up
+label.kumalive.rubric.down =Move rubric down
+label.kumalive.rubric.delete =Delete rubric
+label.kumalive.rubric.choose =Rubrics to use
 label.kumalive.title =Kumalive:
 label.kumalive.wait.start =Wait for a teacher to start Kumalive
 label.kumalive.name.enter =Enter a name for a new Kumalive
@@ -121,7 +126,6 @@ label.kumalive.raised.hands =Raised hands
 label.kumalive.learners =Learners
 label.kumalive.teacher =Teacher
 label.kumalive.finish.speak =Finish speaking
-label.kumalive.mark =Mark learner:
 label.kumalive.mark.great =Great!
 label.kumalive.mark.ok =Just OK
 label.kumalive.mark.bad =Not so good
