LDEV-4380 Replace portrait capturing Flash widget with WebRTC
In order to completely eradicate Flash, we can use WebRTC which seems to
be working OK in newer browsers.

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -725,5 +725,7 @@ label.course.groups.name.not.unique  =Course grouping with such name already exi
 label.save.as.course.grouping.hint  =You can save the groups as "Course groupings" so it can be used in other lessons as well. If the groups are just specifically for this lesson, you might not want to do this. Otherwise, click the button to give them a name and reuse them later.
 label.advanced.settings  =Advanced settings
 
+label.video.stream.not.available  =Video stream not available.
+label.screen.capture.will.appear.in.this.box  =The screen capture will appear in this box.
 
 #======= End labels: Exported 718 labels for en AU =====
