LDEV-4381 Remove obsolete lamsAltServerUrl setting
This setting was used by lams_ld_template and
lams_ld_template_blackboard projects. It was intended to solve the
original issue related to LAMS having to run as http:// for the video
streaming tool, but needing https:// to keep the iframe communication
happy. But once everything was switched to https there is no need in
this setting.

--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -150,3 +150,8 @@ Now reverted back to previous behaviour with lesson loading in the same tab.
 1.2.22 Release Fixes
 ====================
 * NTU-13: Make BB recurrently fetch marks from LAMS that were not yet submitted to external server
+
+1.2.23 Release Fixes
+====================
+* LDEV-4381: Removed obsolete requestSrc and alternative LAMS server URL settings
+
