LDEV-4395 Leader related tools use Portrait for leader
Created a tag LeaderDisplay to display the leader consistently 
across tools.

--- a/lams_tool_leader/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources.properties
@@ -45,7 +45,7 @@ textsearch.phrase  =has this exact wording or phrase:
 textsearch.any.words  =has one or more of these words:
 output.desc.all.users.entries.definition.notebook  =Each learner's entry in Leader Selection
 output.desc.user.is.leader  =Is learner a leader
-label.group.leader  =Group leader:
+label.group.leader  =Group leader: {0}
 label.are.you.going.to.be.leader  =Are you going to be a leader of this group?
 label.leader.selection  =Leader selection
 label.users.from.group  =Learners in group:
