--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -45,7 +45,7 @@ textsearch.phrase  =tiene esta palabra o frase exactamente:
 textsearch.any.words  =tiene una o m\u00e1s de estas palabras:
 output.desc.all.users.entries.definition.notebook  =La entrada de cada alumno en la Selecci\u00f3n de L\u00edder
 output.desc.user.is.leader  =\u00bfEs estudiante un l\u00edder?
-label.group.leader  =L\u00edder del Grupo:
+label.group.leader  =L\u00edder del Grupo: {0}
 label.are.you.going.to.be.leader  =\u00bfVas a ser el l\u00edder de este grupo?
 label.leader.selection  =Selecci\u00f3n de l\u00edder
 label.users.from.group  =Estudiantes en el grupo:
