--- a/lams_tool_leader/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_no_NO.properties
@@ -45,7 +45,7 @@ textsearch.phrase  =har eksakt denne ordlyden eller frasen:
 textsearch.any.words  =har en eller fler av disse ordene
 output.desc.all.users.entries.definition.notebook  =Hver students start i valg av leder
 output.desc.user.is.leader  =Er studenten en leder
-label.group.leader  =Gruppe leder:
+label.group.leader  =Gruppe leder: {0}
 label.are.you.going.to.be.leader  =Vil du bli en leder av denne gruppen ?
 label.leader.selection  =Valg av leder
 label.users.from.group  =Studenter som deltar i gruppen:
