--- a/lams_tool_leader/conf/language/lams/ApplicationResources_pt_BR.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_pt_BR.properties
@@ -45,7 +45,7 @@ textsearch.phrase  =tem estas mesmas palavras ou frases:
 textsearch.any.words  =tem uma ou mais destas palavras:
 output.desc.all.users.entries.definition.notebook  =Cada entrada do aluno na Sele\u00e7\u00e3o L\u00edder
 output.desc.user.is.leader  =\u00c9 um l\u00edder aprendiz
-label.group.leader  =L\u00edder do Grupo:
+label.group.leader  =L\u00edder do Grupo: {0}
 label.are.you.going.to.be.leader  =Vai ser um l\u00edder deste grupo?
 label.leader.selection  =Sele\u00e7\u00e3o L\u00edder
 label.users.from.group  =Os alunos que participam no grupo atual:
