LDEV-4417 Popover portraits in Monitoring
Implemented in Assessment, Chat, Daco, Forum and Submit.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -314,5 +314,9 @@ label.number.learners.in.mark.range  =Number of learners in mark range
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
 
+label.error  =Error
+error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
+label.ok  =OK
+
 
 #======= End labels: Exported 307 labels for en AU =====
