--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -210,6 +210,8 @@ label.highest.mark  =Highest mark
 label.number.learners.in.mark.range  =Number of learners in mark range
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
-
+label.error  =Error
+error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
+label.ok  =OK
 
 #======= End labels: Exported 204 labels for en AU =====
