--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -662,6 +662,12 @@ authoring.fla.liveedit.readonly.remove.activity.error  =The activity can not be 
 authoring.fla.liveedit.readonly.remove.parent.error  =The activity can not be removed. Its parent activity is read-only.
 authoring.fla.liveedit.readonly.remove.child.error  =The activity can not be removed. It has read-only child activities.
 authoring.fla.liveedit.readonly.remove.transition.error  =The transition can not be removed. It is read-only.
+authoring.fla.weights.menu =Weights
+authoring.fla.weights.activity =Activity
+authoring.fla.weights.output =Output
+authoring.fla.weights.weight =Weight
+authoring.fla.weights.sum =Sum
+authoring.fla.weights.sum.error =Output weights do not sum up to 100%. Adjust them in Weights dialog.
 ckeditor.math.math  =Math
 ckeditor.math.functions  =Functions
 ckeditor.math.greek  =Greek
