--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -152,6 +152,9 @@ sysadmin.userinfoUrl  =User information URL
 sysadmin.timeoutUrl  =Timeout URL
 sysadmin.integrated.servers  =integrated server(s) in total
 sysadmin.server.add  =Add new server
+sysadmin.maintain.session  =Session list
+sysadmin.maintain.session.login  =Login
+sysadmin.maintain.session.id  =Session ID
 sysadmin.organisation.create  =Create one
 sysadmin.organisation.select  =Please select...
 sysadmin.login.text  =Update login page text:
