LDEV-4417 Popover portraits in Monitoring
    Implmented in Share Resources, Survey, Leader, Mindmap, 
    Noticeboard, Notebook, Pixlr, Peer Review

--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -176,6 +176,9 @@ label.rating  =Rating
 label.average.rating  =Average rating {0}/{1} votes
 label.your.rating  =Your rating {0}, average rating {1}/{2} votes
 del.confirmation  =Are you sure you want to delete this resource?
+label.error  =Error
+error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
+label.ok  =OK
 
 
 #======= End labels: Exported 170 labels for en AU =====
