--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -152,9 +152,10 @@ sysadmin.userinfoUrl  =User information URL
 sysadmin.timeoutUrl  =Timeout URL
 sysadmin.integrated.servers  =integrated server(s) in total
 sysadmin.server.add  =Add new server
-sysadmin.maintain.session  =Session list
+sysadmin.maintain.session  =Maintain sessions
 sysadmin.maintain.session.login  =Login
 sysadmin.maintain.session.id  =Session ID
+sysadmin.maintain.session.delete  =Delete
 sysadmin.organisation.create  =Create one
 sysadmin.organisation.select  =Please select...
 sysadmin.login.text  =Update login page text:
