LDEV-4417 Popover portraits in Monitoring
        Implmented in GMap

--- a/lams_tool_gmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources.properties
@@ -105,6 +105,6 @@ button.placeMarker  =Place marker
 label.nogroups  =No groups found for activity.
 button.submit  =Finish
 label.activity.completion  =End of activity
-
+label.show.on.map=Show On Map 
 
 #======= End labels: Exported 99 labels for en AU =====
