--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:03 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Sep 14 18:51:53 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -305,6 +305,14 @@ label.other  =Andre
 label.graph.help  =Du kan skalere deg inn og ut i grafikken nedenfor ved \u00e5 benytte musen. N\u00e5r du skalerer deg inn s\u00e5kan det gr\u00e5 feltet i bunn trekkes til h\u00f8yre eller venstre for \u00e5 endre karakter-verdiene
 label.lowest.mark  =Laveste karakter:
 label.highest.mark  =H\u00f8yeste karakter:
+label.number.learners  =Antall studenter
+label.percentage  =Prosent
+label.operation.failed  =Operasjonen feilet
+label.number.groups.finished  =Antall ferdige grupper
+label.marks  =Karakterer
+label.number.learners.in.mark.range  =Antall studenter i karakteromr\u00e5det
+label.number.groups.in.mark.range  =Antall grupper i karakteromr\u00e5det
+label.average.mark  =Gjennomsnitt karakter
 
 
-#======= End labels: Exported 299 labels for no NO =====
+#======= End labels: Exported 307 labels for no NO =====
