LDEV-4054: Updating Greek and Norwegian
Updating Greek and Norwegian

--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:15:20 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Sep 14 18:55:35 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -202,6 +202,14 @@ label.tool.output.has.been.changed  =Utgangsdata for verkt\u00f8y er endret
 label.operation.failed  =Operasjonen var mislykket
 answers.submitted.none  =Veelg minst ett svar for hvert sp\u00f8rsm\u00e5l
 label.summary.downloaded  =Karakterfiler er lastet ned
+label.number.learners  =Studenter
+label.number.groups.finished  =Antall ferdige grupper
+label.graph.help  =Klikk p\u00e5 stolpediagrammet nedenfor og benytt musen til \u00e5 zoome deg inn og ut. N\u00e5r du zoomer deg inn  s\u00e5 vil det gr\u00e5 feltet nedenfor beveges fra h\u00f8yre eller venstre og vise deg karakteromr\u00e5det.
+label.lowest.mark  =Laveste karakter
+label.highest.mark  =H\u00f8yeste karakter
+label.number.learners.in.mark.range  =Antall studenter i karakteromr\u00e5det
+label.number.groups.in.mark.range  =Antall grupper i karakteromr\u00e5det
+label.average.mark  =Gjennomsnitt karakter
 
 
-#======= End labels: Exported 196 labels for no NO =====
+#======= End labels: Exported 204 labels for no NO =====
