--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:39:28 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Sep 14 18:55:38 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -202,6 +202,14 @@ label.tool.output.has.been.changed  =\u03a4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb
 label.operation.failed  =\u0397 \u03bb\u03b5\u03b9\u03c4\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03b1\u03c0\u03ad\u03c4\u03c5\u03c7\u03b5
 answers.submitted.none  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03bf\u03c5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03bd \u03bc\u03af\u03b1 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u03b3\u03b9\u03b1 \u03ba\u03ac\u03b8\u03b5 \u03bc\u03af\u03b1 \u03b1\u03c0\u03cc \u03c4\u03b9\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2.
 label.summary.downloaded  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c4\u03c9\u03bd \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd \u03ad\u03c7\u03b5\u03b9 \u03bb\u03b7\u03c6\u03b8\u03b5\u03af.
+label.number.learners  =\u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9
+label.number.groups.finished  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bf\u03bc\u03ac\u03b4\u03c9\u03bd \u03c0\u03bf\u03c5 \u03ad\u03c7\u03bf\u03c5\u03bd \u03c4\u03b5\u03bb\u03b5\u03b9\u03ce\u03c3\u03b5\u03b9
+label.graph.help  =\u03a3\u03c4\u03bf \u03c0\u03b1\u03c1\u03b1\u03ba\u03ac\u03c4\u03c9 \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1, \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03b5 \u03bc\u03b9\u03b1 \u03b3\u03c1\u03b1\u03bc\u03bc\u03ae \u03c3\u03c4\u03bf \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1 \u03ba\u03b1\u03b9, \u03c3\u03c4\u03b7 \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1, \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03bd \u03c4\u03c1\u03bf\u03c7\u03cc \u03c4\u03bf\u03c5 \u03c0\u03bf\u03bd\u03c4\u03b9\u03ba\u03b9\u03bf\u03cd \u03b3\u03b9\u03b1 \u03bc\u03b5\u03b3\u03ad\u03b8\u03c5\u03bd\u03c3\u03b7 \u03ba\u03b1\u03b9 \u03c3\u03bc\u03af\u03ba\u03c1\u03c5\u03bd\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03b3\u03c1\u03b1\u03c6\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2. \u039c\u03cc\u03bb\u03b9\u03c2 \u03ba\u03ac\u03bd\u03b5\u03c4\u03b5 \u03bc\u03b5\u03b3\u03ad\u03b8\u03c5\u03bd\u03c3\u03b7, \u03b7 \u03b3\u03ba\u03c1\u03af\u03b6\u03b1 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03c3\u03c4\u03bf \u03ba\u03b1\u03c4\u03ce\u03c4\u03b1\u03c4\u03bf \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1 \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03bc\u03b5\u03c4\u03b1\u03ba\u03b9\u03bd\u03b7\u03b8\u03b5\u03af \u03c0\u03c1\u03bf\u03c2 \u03c4\u03b1 \u03b1\u03c1\u03b9\u03c3\u03c4\u03b5\u03c1\u03ac \u03ae \u03c0\u03c1\u03bf\u03c2 \u03c4\u03b1 \u03b4\u03b5\u03be\u03b9\u03ac \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b5\u03bc\u03c6\u03b1\u03bd\u03b9\u03c3\u03c4\u03b5\u03af \u03b4\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03cc \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd.
+label.lowest.mark  =\u03a7\u03b1\u03bc\u03b7\u03bb\u03cc\u03c4\u03b5\u03c1\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1
+label.highest.mark  =\u03a5\u03c8\u03b7\u03bb\u03cc\u03c4\u03b5\u03c1\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1
+label.number.learners.in.mark.range  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd \u03c3\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b5\u03cd\u03c1\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd
+label.number.groups.in.mark.range  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bf\u03bc\u03ac\u03b4\u03c9\u03bd \u03c3\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b5\u03cd\u03c1\u03bf\u03c2 \u03c0\u03b5\u03c1\u03b9\u03bf\u03c7\u03ae\u03c2
+label.average.mark  =\u039c\u03ad\u03c3\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1
 
 
-#======= End labels: Exported 196 labels for el GR =====
+#======= End labels: Exported 204 labels for el GR =====
