--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -405,5 +405,6 @@ tour.progress.email.configure.title  =Schedule progress reports
 tour.progress.email.confure.content  =Set up the dates to automatically send emails with a summary of learners progress to all monitors for this lesson.
 error.date.in.past  =Selected date is in the past.
 
-
+audit.lesson.removed  =Lesson "{0}" ({1}) status changed to removed.
+audit.lesson.removed.permanently  =Lesson "{0}" ({1}) removed permanently.
 #======= End labels: Exported 398 labels for en AU =====
