LDEV-4427 System Admin can delete profile pictures

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -513,6 +513,6 @@ button.select.importfile  =Select file to import
 label.upload.info  =Uploaded file must be an Excel file and not exceed size of {0}
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.not.xls  =File is not an Excel .xls file.
-
-
+error.portrait.removal.failed=Unable to delete portrait. See error file for details
+label.delete.portrait=Delete Portrait
 #======= End labels: Exported 503 labels for en AU =====
