--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -724,6 +724,6 @@ label.enter.course.grouping.name  =Please enter name for the new course grouping
 label.course.groups.name.not.unique  =Course grouping with such name already exists. Please enter another one.
 label.save.as.course.grouping.hint  =You can save the groups as "Course groupings" so it can be used in other lessons as well. If the groups are just specifically for this lesson, you might not want to do this. Otherwise, click the button to give them a name and reuse them later.
 label.advanced.settings  =Advanced settings
-
+audit.delete.portrait=Portrait for user {0} {1}({2}) deleted. Portrait Id was {3}.
 
 #======= End labels: Exported 718 labels for en AU =====
