LDEV-4415 Add a title to weights dialog

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -663,6 +663,7 @@ authoring.fla.liveedit.readonly.remove.parent.error  =The activity can not be re
 authoring.fla.liveedit.readonly.remove.child.error  =The activity can not be removed. It has read-only child activities.
 authoring.fla.liveedit.readonly.remove.transition.error  =The transition can not be removed. It is read-only.
 authoring.fla.weights.menu =Weights
+authoring.fla.weights.title =Weights on activity outputs
 authoring.fla.weights.activity =Activity
 authoring.fla.weights.output =Output
 authoring.fla.weights.weight =Weight
