LDEV-4054: updating Greek
Updating Greek with latest changes

--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:27:17 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Sep 25 16:48:16 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -509,6 +509,9 @@ button.select.importfile  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03
 label.upload.info  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf Excel \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 {0}
 errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae\u03c2 \u03be\u03b5\u03c0\u03b5\u03c1\u03bd\u03ac \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2: {0}
 error.attachment.not.xls  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf .xls (Excel).
+sysadmin.maintain.session  =\u03a3\u03c5\u03bd\u03b4\u03b5\u03b4\u03b5\u03bc\u03ad\u03bd\u03bf\u03b9 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2
+sysadmin.maintain.session.login  =\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
+sysadmin.maintain.session.id  =\u0391\u03bd\u03b1\u03b3\u03bd\u03c9\u03c1\u03b9\u03c3\u03c4\u03b9\u03ba\u03cc \u03c0\u03b5\u03c1\u03b9\u03cc\u03b4\u03bf\u03c5 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7\u03c2
 
 
-#======= End labels: Exported 503 labels for el GR =====
+#======= End labels: Exported 506 labels for el GR =====
