--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -109,5 +109,8 @@ label.number.learners.in.mark.range  =Number of learners in mark range
 label.show.marks.chart  =Show marks chart
 label.hide.marks.chart  =Hide marks chart
 
-
+label.button.show.weights =Show Weights
+label.button.hide.weights =Hide Weights
+label.weights.title =Weights on activity outputs
+ 
 #======= End labels: Exported 102 labels for en AU =====
