--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -407,4 +407,7 @@ error.date.in.past  =Selected date is in the past.
 
 audit.lesson.removed.permanently  =Lesson "{0}" ({1}) removed permanently.
 audit.lesson.status.changed=Lesson "{0}" ({1}) status changed from "{2}" to "{3}"
+
+tour.gradebook.show.weight  =Show Weights
+tour.gradebook.show.weight.content  =Show/hide the activity weights used for marking this lesson.
 #======= End labels: Exported 398 labels for en AU =====
