--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -133,4 +133,18 @@ message.kumalive.finish.kumalive =Kumalive is finished. The window will close.
 message.kumalive.finish.kumalive.confirm =Are you sure you want to finish this Kumalive?
 message.kumalive.speak.not.raised.hand =Do you want to make a speaker a learner who did not raise hand?
 label.kumalive.closed =You have got no connection with Kumalive. Try closing this window and opening it again.
+label.kumalive.report.full.name =Name
+label.kumalive.report.header =Kumalive report
+label.kumalive.report.name =Kumalive name
+label.kumalive.report.mark.none =No marks
+label.kumalive.report.mark =Marks
+label.kumalive.report.first.name =First name
+label.kumalive.report.last.name =Last name
+label.kumalive.report.login =Login
+label.kumalive.report.attempt =Attempt
+label.kumalive.report.average =Average
+message.kumalive.report.load.error =Error while loading data for report
+button.kumalive.ok =OK
+button.kumalive.report.export.all =Export all
+button.kumalive.report.export.selected =Export selected
 #======= End labels: Exported 102 labels for en AU =====
