--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_en_AU.properties
@@ -82,7 +82,7 @@ label.wiki.add  =Add
 label.wiki.add.toolTip  =Add a new Wiki page to this Wiki
 label.wiki.add.title.exists  =A Wiki page with title [{0}] already exists, please choose a different title.
 label.wiki.add.title.required  =A title is required for the Wiki page.
-label.wiki.last.edit  =Last edited by {0}, at {1}
+label.wiki.last.edit  =Last edited by <b>{0}</b> - {1}
 label.wiki.refresh  =Refresh
 label.wiki.refresh.toolTip  =Refresh the page to get the current content
 label.wiki.view  =View
