LDEV-4366 Add learners summary sheet to Kumalive Excel report
Also add date to learner attempts in Kumalive sheet and do some minor
formatting.

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -134,7 +134,8 @@ message.kumalive.finish.kumalive.confirm =Are you sure you want to finish this K
 message.kumalive.speak.not.raised.hand =Do you want to make a speaker a learner who did not raise hand?
 label.kumalive.closed =You have got no connection with Kumalive. Try closing this window and opening it again.
 label.kumalive.report.full.name =Name
-label.kumalive.report.header =Kumalive report
+label.kumalive.report.sheet.header =Kumalive report for {0}
+label.kumalive.report.sheet.header.learners =Learners summary
 label.kumalive.report.name =Kumalive name
 label.kumalive.report.mark.none =No marks
 label.kumalive.report.mark =Marks
@@ -143,6 +144,7 @@ label.kumalive.report.last.name =Last name
 label.kumalive.report.login =Login
 label.kumalive.report.attempt =Attempt
 label.kumalive.report.average =Average
+label.kumalive.report.time =Time
 message.kumalive.report.load.error =Error while loading data for report
 button.kumalive.ok =OK
 button.kumalive.report.export.all =Export all
