--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:38 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Oct 06 17:59:14 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -108,6 +108,7 @@ label.marks  =Marks
 label.number.learners.in.mark.range  =Number of learners in mark range
 label.show.marks.chart  =Show marks chart
 label.hide.marks.chart  =Hide marks chart
+gradebook.summary.activity.marks  =Summary for activity marks
 
 
-#======= End labels: Exported 102 labels for en AU =====
+#======= End labels: Exported 103 labels for en AU =====
