LDEV-3517: adding labels to i18n
Adding all the labels to i18n site

--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,10 +1,16 @@
-appName = peerreview 
+appName = peer_review 
+#language code: en 
+#locale code: AU 
+
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Oct 08 01:09:49 CST 2017 
+ 
+#=================== labels for Peer Review =================# 
+
 activity.title  =Peer Review
 activity.description  =Individual peer review.
 activity.helptext  =Individual peer review.
 tool.display.name  =Peer Review Tool
 tool.description  =Tool for individual peer review.
-appName  =Peer Review
 errorPage.title  =Error page
 errorPage.heading  =Some error(s) occurred when handling your request
 label.authoring.heading  =Peer Review Authoring
@@ -28,16 +34,16 @@ monitoring.tab.statistics  =Statistic
 monitoring.tab.edit.activity  =Edit Activity
 monitoring.label.group  =Group
 monitoring.summary.note  =Note: number of learners is the number of learners who have viewed the resource.
-monitoring.label.number.learners  =Number of Learners
+monitoring.label.number.learners  =Number of learners
 monitoring.label.user.name  =Name
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
+message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 label.delete  =Delete
 label.edit  =Edit
 label.finished  =Next Activity
 label.completed  =Completed
 label.finish  =Finished
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =No session available
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 message.monitoring.summary.no.resource.for.group  =No resource available for this group.
 button.try.again  =Try again
@@ -59,27 +65,27 @@ label.monitoring.heading  =Peer Review Monitoring
 label.average.rating  =Average rating {0}/{1} votes
 label.redo  =Redo ratings
 label.rating.criterias  =Rating criteria
-label.add.criteria  =Add Criterion
+label.add.criteria  =Add criterion
 label.your.rating  =Your rating is {0}
 label.you.gave.rating  =You gave a rating of {0}
-label.avg.rating = Avg rating {0} out of {1} votes
+label.avg.rating  =Avg rating {0} out of {1} votes
 label.not.rated  =You have not rated this user
 label.rate.limits.reminder  =Rate a minimum of {0} and a maximum of {1} users.
-label.rate.all.users  =Rate All Users
+label.rate.all.users  =Rate all users
 label.rate.limits.topic.reminder  =You have rated {0} users already.
-label.rate.limits.reminder.min = You must rate at least {0} users.
-label.rate.limits.reminder.max = You can only rate up to {0} users.
-js.warning.max.min.limit = There is an error with the minimum and/or maximum set for ratings. Please check and try again. 
-label.minimum  =Minimum Number of Ratings:
-label.maximum  =Maximum Number of Ratings:
+label.rate.limits.reminder.min  =You must rate at least {0} users.
+label.rate.limits.reminder.max  =You can only rate up to {0} users.
+js.warning.max.min.limit  =There is an error with the minimum and/or maximum set for ratings. Please check and try again.
+label.minimum  =Minimum number of ratings:
+label.maximum  =Maximum number of ratings:
 label.no.minimum  =No minimum
 label.no.maximum  =No maximum
 label.minimum.number.words  =Minimum number of words in a comment {0}
 warning.minimum.number.words  =There is a minimum required number of words in a comment is {0}. You have entered {1} word(s).
 label.comment.textarea.tip  =Type your comment here then click on the green tick.
 label.max.number.marks.each.user  =Max number of reviews per user (applies only to Star Ratings)
-label.move.up  =Move Up
-label.move.down  =Move Down
+label.move.up  =Up
+label.move.down  =Down
 label.allow.comments  =Allow learners to comment on other learners
 label.sort.by.user.name  =Sort by user name
 label.user.name  =User name
@@ -89,78 +95,77 @@ label.show.ratings.left.for.user  =After completion, show feedback left for  the
 label.comment.minimum.number.words  =Minimum number of words in a comment{0}
 label.no.users  =There are no users available for rating. Press Refresh to check for new users.
 label.no.ratings.left  =No ratings left
-label.cant.rate  =This user cannot be rated as it attracted the maximum number of rates already. 
-label.refresh=Refresh
-warning.comment.blank=Comment text is missing.
+label.cant.rate  =This user cannot be rated as it attracted the maximum number of rates already.
+label.refresh  =Refresh
+warning.comment.blank  =Comment text is missing.
 creating.users.message  =Please wait while the learners\' details are set up ready for you to review their responses.
-error.max.ratings.per.user=Unable to save the review - the maximum number of ratings may have been reached. The page will now be refreshed.
-label.review.options=Review Options
-label.activity.completion=End of Activity
-label.rating.style.star=Star Rating
-label.rating.style.ranking=Ranking
-label.rating.style.hedging=Hedging
-label.rating.style.comment=Comment
-label.rating.all=ALL
-label.rating.author.justify=Ask for hedging justification?
-label.rating.learner.hedge.assign.marks=Assign marks to answers. Max possible mark: 10
-label.rating.learner.justify=Please, justify your mark allocation.
-label.rating.max.hedge=Total Hedge Mark
-error.rating.hedge.total.add.up=Marks for criteria {0} must add up to {1}
-error.rating.rank.all=You must rank all the learners for criteria {0}
-label.justify.hedging.marks=Justify your mark allocation.
-label.assign.marks=Assign up to {0} marks altogether, sharing marks across learners. Current total: {1}.
-error.assign.marks=The marks must add up to {0}. 
-label.assign.ranks=Fill the boxes with the top {0} entries, by dragging the learners' name onto the box.
-error.assign.ranks=The marks must add up to {0}. 
-label.assign.rankAll=Order the learners in ranking order, from first to last, by dragging learners from the right hand column to the left column. Dragging a name on top of another will put the new name first. All learners must be ranked. 
-error.assign.rankAll=All learners must be ranked. 
-label.ranked=Ranked
-label.unranked=Unranked
-label.addlearnerhere=Add learner here....
-label.alllearnersadded=All learners added
-label.next=Next
-label.previous=Previous
-label.step=Step {0} of {1}
-label.mark=Mark
-label.rating.rank=Rank
-label.self.review=Allow Self Review
-label.monitoring.num.of.comments={0} Comments
-label.monitoring.instructions.rank.all.learners=Learners needed to rank ALL the learners.
-label.monitoring.instructions.rank.some.learners=Learners needed to rank {0} learners.
-label.monitoring.instructions.assign.some.marks=Learners needed to assign {0} marks altogether.
-label.learning.your.rankings.shown.in.brackets=(Your rankings shown in brackets after name)
-label.learning.your.marks.shown.in.brackets=(Your marks shown in brackets after name)
-label.learning.average.rankings=Average Rankings:
-label.learning.average.marks=Average Marks:
-label.learning.your.justification=Your justification:
-label.monitoring.number.learners=Number of learners
-label.monitoring.number.learners.finished=Number of learners finished
-label.monitoring.view=View {0}
-label.close=Close
-event.sent.results.subject=LAMS: {0} results were released 
-event.sent.results.body=<p>{0}<br/><br/>Your results are:</p><div>{1}</div><p>This message was send automatically, please do not reply to it.</p>
-event.sent.results.criteria.comment=<p><strong>{0}</strong>:<ul>{1}</ul></p>
-event.sent.results.criteria.star=<p><strong>{0}</strong> (Star): {1}</p><UL>{2}</UL>
-event.sent.results.criteria.hedge=<p><strong>{0}</strong> (Mark Hedging): {1} out of {2}</p>
-event.sent.results.criteria.rank=<p><strong>{0}</strong> (Rank): {1} out of {2}</p>
-event.sent.results.criteria.rankAll=<p><strong>{0}</strong> (Rank All): {1}</p>
-event.sent.results.no.results=No results
-msg.results.sent={0} Email(s) Sent
-button.email.results=Email Results
-label.notify.user.of.results=Notify Users of Results
-label.number.of.team.members=No of team members
-label.average=Average
-label.for.user=For {0} 
-label.learner=Student
-label.spa.factor=SPA factor
-label.total.group.mark=Total team mark
-label.individual.mark=Individual mark
-error.edit.not.remove=You may edit but you may not remove a saved comment.
-error.unable.save.comments=Unable to save comments
+error.max.ratings.per.user  =Unable to save the review - the maximum number of ratings may have been reached. The page will now be refreshed.
+label.review.options  =Review options
+label.activity.completion  =End of activity
+label.rating.style.star  =Star rating
+label.rating.style.ranking  =Ranking
+label.rating.style.hedging  =Hedging
+label.rating.style.comment  =Comment
+label.rating.all  =ALL
+label.rating.author.justify  =Ask for hedging justification?
+label.rating.learner.hedge.assign.marks  =Assign marks to answers. Max possible mark: 10
+label.rating.learner.justify  =Please, justify your mark allocation.
+label.rating.max.hedge  =Total hedge mark
+error.rating.hedge.total.add.up  =Marks for criteria {0} must add up to {1}
+error.rating.rank.all  =You must rank all the learners for criteria {0}
+label.justify.hedging.marks  =Justify your mark allocation.
+label.assign.marks  =Assign up to {0} marks altogether, sharing marks across learners. Current total: {1}.
+error.assign.marks  =The marks must add up to {0}.
+label.assign.ranks  =Fill the boxes with the top {0} entries, by dragging the learners'' name onto the box.
+error.assign.ranks  =The marks must add up to {0}.
+label.assign.rankAll  =Order the learners in ranking order, from first to last, by dragging learners from the right hand column to the left column. Dragging a name on top of another will put the new name first. All learners must be ranked.
+error.assign.rankAll  =All learners must be ranked.
+label.ranked  =Ranked
+label.unranked  =Unranked
+label.addlearnerhere  =Add learner here....
+label.alllearnersadded  =All learners added
+label.next  =Next
+label.previous  =Previous
+label.step  =Step {0} of {1}
+label.mark  =Mark
+label.rating.rank  =Rank
+label.self.review  =Allow self review
+label.monitoring.num.of.comments  ={0} Comments
+label.monitoring.instructions.rank.all.learners  =Learners needed to rank ALL the learners.
+label.monitoring.instructions.rank.some.learners  =Learners needed to rank {0} learners.
+label.monitoring.instructions.assign.some.marks  =Learners needed to assign {0} marks altogether.
+label.learning.your.rankings.shown.in.brackets  =(Your rankings shown in brackets after name)
+label.learning.your.marks.shown.in.brackets  =(Your marks shown in brackets after name)
+label.learning.average.rankings  =Average rankings:
+label.learning.average.marks  =Average marks:
+label.learning.your.justification  =Your justification:
+label.monitoring.number.learners  =Number of learners
+label.monitoring.number.learners.finished  =Number of learners finished
+label.monitoring.view  =View {0}
+label.close  =Close
+event.sent.results.subject  =LAMS: {0} results were released
+event.sent.results.body  =<p>{0}<br/><br/>Your results are:</p><div>{1}</div><p>This message was send automatically, please do not reply to it.</p>
+event.sent.results.criteria.comment  =<p><strong>{0}</strong>:<ul>{1}</ul></p>
+event.sent.results.criteria.star  =<p><strong>{0}</strong> (Star): {1}</p><UL>{2}</UL>
+event.sent.results.criteria.hedge  =<p><strong>{0}</strong> (Mark Hedging): {1} out of {2}</p>
+event.sent.results.criteria.rank  =<p><strong>{0}</strong> (Rank): {1} out of {2}</p>
+event.sent.results.criteria.rankAll  =<p><strong>{0}</strong> (Rank All): {1}</p>
+event.sent.results.no.results  =No results
+msg.results.sent  ={0} Email(s) Sent
+button.email.results  =Email Results
+label.notify.user.of.results  =Notify Users of results
+label.number.of.team.members  =No of team members
+label.average  =Average
+label.for.user  =For {0}
+label.learner  =Student
+label.spa.factor  =SPA factor
+label.total.group.mark  =Total team mark
+label.individual.mark  =Individual mark
+error.edit.not.remove  =You may edit but you may not remove a saved comment.
+error.unable.save.comments  =Unable to save comments
 label.show.ratings.left.by.user  =After completion, show feedback left for other students
 label.ratings.by.others  =Ratings left for you
-label.no.ratings.out.of.possible.ratings={0} rating(s) out of {1} possible ratings.
-
+label.no.ratings.out.of.possible.ratings  ={0} rating(s) out of {1} possible ratings.
 label.export.team.results  =Export
 label.manage.users  =Manage users
 label.manage.users.description  =Uncheck all learners that should not be rated by others
@@ -168,3 +173,5 @@ label.removed.user.warning  =The teacher has limited your ability to rate and be
 label.user.hidden  =Remove user from rating
 label.hide.user.confirmation  =Are you sure you want to stop rating this user? It will lead to removal of all ratings and comments left by him/her.
 
+
+#======= End labels: Exported 166 labels for en AU =====
