LDEV-4054: Updating translations
Upgrading English, Greek, Spanish, Norwegian

--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Mar 27 23:48:33 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:39 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -248,6 +248,7 @@ admin.page.title  =Forum Settings
 admin.success  =Configuration successfully saved.
 admin.return  =Return to maintain LAMS
 admin.button.save  =Save
-admin.keep.learner.content =Never delete learner added posts
+admin.keep.learner.content  =Don't delete postings when learners are removed from the activity.
 
-#======= End labels: Exported 238 labels for en AU =====
+
+#======= End labels: Exported 243 labels for en AU =====
