--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Mar 27 23:48:37 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:40 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -244,6 +244,11 @@ js.error.validate.reply.number  =Se ha encontrado un error con el  los m\u00edni
 label.topics  =Temas
 label.authoring.basic.resource.file.input  =Archivo
 message.monitoring.edit.activity.not.editable  =Esta actividad ya no se puede editar
+admin.page.title  =Configuraci\u00f3n de Foros
+admin.success  =Cambios han sido guardados
+admin.return  =Volver a p\u00e1gina de mantenimiento
+admin.button.save  =Guardar
+admin.keep.learner.content  =No borrar publicaciones de los estudiantes cuando estos son removidos de la actividad.
 
 
-#======= End labels: Exported 238 labels for es ES =====
+#======= End labels: Exported 243 labels for es ES =====
