--- a/lams_tool_forum/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:11:19 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:41 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -244,6 +244,11 @@ js.error.validate.reply.number  =Det er en feil med minimum og/eller maksimum an
 label.topics  =Emner
 label.authoring.basic.resource.file.input  =Fil
 message.monitoring.edit.activity.not.editable  =Aktiviteten kan ikke editeres lengre
+admin.page.title  =Forum oppsett
+admin.success  =Oppstillingen ble lagret korrekt
+admin.return  =G\u00e5 tilbake til LAMS vedlikehold
+admin.button.save  =Lagre
+admin.keep.learner.content  =Ikke slett innlegg n\u00e5r studentene blir fjernet fra aktiviteten.
 
 
-#======= End labels: Exported 238 labels for no NO =====
+#======= End labels: Exported 243 labels for no NO =====
