--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 01:18:51 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:22:11 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -210,6 +210,9 @@ label.highest.mark  =Highest mark
 label.number.learners.in.mark.range  =Number of learners in mark range
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
+label.error  =Error
+error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
+label.ok  =OK
 
 
-#======= End labels: Exported 204 labels for en AU =====
+#======= End labels: Exported 207 labels for en AU =====
