--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:19:58 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:25:45 CST 2017 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -10,7 +10,7 @@ learner.title  =LAMS Learner
 error.title  =Error occured
 message.activity.loading  =The next task is loading. Please wait....
 message.lesson.finished  =Congratulations, {0}, you have finished.
-message.lesson.finishedCont  =You have now completed the {0} lesson. You can return at anytime to this lesson and revisit and review activities by double clicking on the blue icons in the left hand progress bar. You can now close this window.
+message.lesson.finishedCont  =You have now completed the {0} lesson. You can return at anytime to this lesson and revisit and review activities by double clicking on the round icons in progress bar. You can now close this window.
 label.next.button  =Next
 label.finish.button  =Next Activity
 message.activity.parallel.partialComplete  =You have to complete the other task before progressing to the next activity....
