LDEV-4054: Updating translations
Updating Greek and English

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:22:24 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:38:21 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -268,7 +268,6 @@ lesson.presence  =Presence
 sequence.help.info  =Double click on an activity for more details
 lesson.learner.url  =Lesson URL:
 button.select  =Select
-lesson.copy.prompt  =(now press Ctrl+C to copy to clipboard)
 learner.group.select.all  =Select/Unselect all
 email.notifications.problems.sending.emails  =Some problems occurred while sending emails. Please, contact your system administrator.
 learner.group.remove.progress  =You are about to remove student(s) from a lesson. The student(s) will not have access to this lesson any longer. Do you also want to remove the student(s) progress?
@@ -404,6 +403,8 @@ tour.progress.email.send.content  =Email a summary of the learners progress to y
 tour.progress.email.configure.title  =Schedule progress reports
 tour.progress.email.confure.content  =Set up the dates to automatically send emails with a summary of learners progress to all monitors for this lesson.
 error.date.in.past  =Selected date is in the past.
+audit.lesson.removed.permanently  =Lesson "{0}" ({1}) removed permanently.
+audit.lesson.status.changed  =Lesson "{0}" ({1}) status changed from "{2}" to "{3}"
 
 
-#======= End labels: Exported 398 labels for en AU =====
+#======= End labels: Exported 399 labels for en AU =====
