--- a/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:22:17 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:38:18 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -268,7 +268,6 @@ lesson.presence  =online \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\
 sequence.help.info  =\u039a\u03ac\u03bd\u03c4\u03b5 \u03b4\u03b9\u03c0\u03bb\u03cc \u03ba\u03bb\u03b9\u03ba \u03c3\u03b5 \u03bc\u03b9\u03b1 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b3\u03b9\u03b1 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2
 lesson.learner.url  =URL \u039c\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2:
 button.select  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5
-lesson.copy.prompt  =(\u03a4\u03ce\u03c1\u03b1 \u03c0\u03b1\u03c4\u03ae\u03c3\u03c4\u03b5 Ctrl + C \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b1\u03bd\u03c4\u03b9\u03b3\u03c1\u03ac\u03c8\u03b5\u03c4\u03b5 \u03c3\u03c4\u03bf \u03c0\u03c1\u03cc\u03c7\u03b5\u03b9\u03c1\u03bf)
 learner.group.select.all  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03cc\u03bb\u03c9\u03bd / \u039a\u03b1\u03bd\u03ad\u03bd\u03b1\u03c2
 email.notifications.problems.sending.emails  =\u0395\u03bc\u03c6\u03b1\u03bd\u03af\u03c3\u03c4\u03b7\u03ba\u03b1\u03bd \u03ba\u03ac\u03c0\u03bf\u03b9\u03b1 \u03c0\u03c1\u03bf\u03b2\u03bb\u03ae\u03bc\u03b1\u03c4\u03b1 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd \u03c4\u03bf\u03c5 \u03b7\u03bb\u03b5\u03ba\u03c4\u03c1\u03bf\u03bd\u03b9\u03ba\u03bf\u03cd \u03c4\u03b1\u03c7\u03c5\u03b4\u03c1\u03bf\u03bc\u03b5\u03af\u03bf\u03c5. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5, \u03b5\u03c0\u03b9\u03ba\u03bf\u03b9\u03bd\u03c9\u03bd\u03ae\u03c3\u03c4\u03b5 \u03bc\u03b5 \u03c4\u03bf \u03b4\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ae \u03c4\u03bf\u03c5 \u03c3\u03c5\u03c3\u03c4\u03ae\u03bc\u03b1\u03c4\u03cc\u03c2 \u03c3\u03b1\u03c2.
 learner.group.remove.progress  =\u0395\u03af\u03c3\u03c4\u03b5 \u03ad\u03c4\u03bf\u03b9\u03bc\u03bf\u03c2 \u03bd\u03b1 \u03b1\u03c6\u03b1\u03b9\u03c1\u03ad\u03c3\u03b5\u03c4\u03b5 \u03bc\u03b1\u03b8\u03b7\u03c4\u03ae (\u03b5\u03c2) \u03b1\u03c0\u03cc \u03ad\u03bd\u03b1 \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1. \u039f/\u039f\u03b9 \u03bc\u03b1\u03b8\u03b7\u03c4\u03ae\u03c2 (-\u03b5\u03c2) \u03b4\u03b5\u03bd \u03b8\u03b1 \u03ad\u03c7\u03bf\u03c5\u03bd \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03c0\u03bb\u03ad\u03bf\u03bd. \u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03b1\u03c4\u03b1\u03c1\u03b3\u03ae\u03c3\u03b5\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c4\u03b7\u03bd \u03c0\u03c1\u03cc\u03bf\u03b4\u03bf \u03c4\u03c9\u03bd \u03bc\u03b1\u03b8\u03b7\u03c4\u03ce\u03bd \u03b1\u03c5\u03c4\u03ce\u03bd;
@@ -404,6 +403,8 @@ tour.progress.email.send.content  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u0
 tour.progress.email.configure.title  =\u03a0\u03c1\u03bf\u03b3\u03c1\u03b1\u03bc\u03bc\u03b1\u03c4\u03b9\u03c3\u03bc\u03cc\u03c2 \u03b5\u03ba\u03b8\u03ad\u03c3\u03b5\u03c9\u03bd \u03c0\u03c1\u03bf\u03cc\u03b4\u03bf\u03c5
 tour.progress.email.confure.content  =\u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03c4\u03b5 \u03c4\u03b9\u03c2 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b1\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03b7 \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd \u03b7\u03bb\u03b5\u03ba\u03c4\u03c1\u03bf\u03bd\u03b9\u03ba\u03bf\u03cd \u03c4\u03b1\u03c7\u03c5\u03b4\u03c1\u03bf\u03bc\u03b5\u03af\u03bf\u03c5 \u03bc\u03b5 \u03bc\u03b9\u03b1 \u03c3\u03cd\u03bd\u03bf\u03c8\u03b7 \u03c4\u03b7\u03c2 \u03c0\u03c1\u03bf\u03cc\u03b4\u03bf\u03c5 \u03c4\u03c9\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd \u03c3\u03b5 \u03cc\u03bb\u03bf\u03c5\u03c2 \u03c4\u03bf\u03c5\u03c2 \u03b5\u03c0\u03cc\u03c0\u03c4\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1.
 error.date.in.past  =\u0397 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03c3\u03c4\u03bf \u03c0\u03b1\u03c1\u03b5\u03bb\u03b8\u03cc\u03bd.
+audit.lesson.removed.permanently  =\u03a4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 "{0}" ({1}) \u03b1\u03c6\u03b1\u03b9\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5 \u03bc\u03cc\u03bd\u03b9\u03bc\u03b1.
+audit.lesson.status.changed  =\u03a4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 "{0}" ({1}) \u03ac\u03bb\u03bb\u03b1\u03be\u03b5 \u03b1\u03c0\u03cc "{2}" \u03c3\u03b5 "{3}"
 
 
-#======= End labels: Exported 398 labels for el GR =====
+#======= End labels: Exported 399 labels for el GR =====
