LDEV-4054: Updating translations
Updating Greek and English

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Jun 13 23:35:30 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:39:50 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -509,6 +509,11 @@ button.select.importfile  =Select file to import
 label.upload.info  =Uploaded file must be an Excel file and not exceed size of {0}
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.not.xls  =File is not an Excel .xls file.
+sysadmin.maintain.session  =Logged in users
+sysadmin.maintain.session.login  =Login
+sysadmin.maintain.session.id  =Session ID
+error.portrait.removal.failed  =Unable to delete portrait. See error file for details
+label.delete.portrait  =Delete portrait
 
 
-#======= End labels: Exported 503 labels for en AU =====
+#======= End labels: Exported 508 labels for en AU =====
