--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Sep 25 16:48:16 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:39:51 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -512,6 +512,8 @@ error.attachment.not.xls  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u0
 sysadmin.maintain.session  =\u03a3\u03c5\u03bd\u03b4\u03b5\u03b4\u03b5\u03bc\u03ad\u03bd\u03bf\u03b9 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2
 sysadmin.maintain.session.login  =\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 sysadmin.maintain.session.id  =\u0391\u03bd\u03b1\u03b3\u03bd\u03c9\u03c1\u03b9\u03c3\u03c4\u03b9\u03ba\u03cc \u03c0\u03b5\u03c1\u03b9\u03cc\u03b4\u03bf\u03c5 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7\u03c2
+error.portrait.removal.failed  =\u0394\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b4\u03c5\u03bd\u03b1\u03c4\u03ae \u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c4\u03bf\u03c5 \u03c0\u03bf\u03c1\u03c4\u03c1\u03b1\u03af\u03c4\u03bf\u03c5. \u0394\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c3\u03c6\u03b1\u03bb\u03bc\u03ac\u03c4\u03c9\u03bd \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2
+label.delete.portrait  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c0\u03bf\u03c1\u03c4\u03c1\u03b1\u03af\u03c4\u03bf\u03c5
 
 
-#======= End labels: Exported 506 labels for el GR =====
+#======= End labels: Exported 508 labels for el GR =====
